Helm/emart/namespace-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: emart-dev
  labels:
    name: emart-dev
resources:
  requests:
    cpu: 200m
    memory: 1Gi
  limits:
    cpu: 200m
    memory: 2Gi
