Helm/emart/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: emart-dev
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: emartapp:v1
        ports:
        - containerPort: 5000
      nodeSelector: 
        nodepool-type: user-app

---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: emart-dev
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
