Helm/emart/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: emart-dev
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: emartapp:v1
        ports:
        - name: client-port
          containerPort: 4200
          hostPort: 4200
        readinessProbe:
          httpGet:
            path: /
            port: client-port
          initialDelaySeconds: 15
          periodSeconds: 10
         # Requests & Limits   
        resources:
          requests:
            cpu: "100m" 
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"   
      nodeSelector: 
        nodepool-type: user-app
      


---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: emart-dev
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 90
      targetPort: 4200
